# framework.uifw.evas

./: .gitignore  COPYING  ChangeLog  NEWS  README  aclocal.m4  config.cache  config.h  config.h.in  config.status  configure  configure.ac  evas-1.0.999.0-doc.tar.bz2  evas.rebase.complete  evas.spec  evas.spec.in  libtool  project.config  readme.slp2
debian/: SVN_REV  changelog  control  files  libevas-engines-extras.install  libevas-engines-extras.substvars  libevas-engines.substvars  libevas-svn-01.shlibs  libevas.install  libevas.shlibs  libevas.substvars  rules
debian/libevas-dbg/DEBIAN/: control  md5sums
debian/libevas-dev/DEBIAN/: control  md5sums
debian/libevas-doc/DEBIAN/: control  md5sums
debian/libevas-engines-extras/DEBIAN/: control  md5sums
debian/libevas-engines/DEBIAN/: control  md5sums
debian/libevas/DEBIAN/: control  md5sums
doc/: Doxyfile.in  e.css  evas.dox  evas_examples.dox
doc/html/: functions.html  globals_0x62.html  globals_0x63.html  globals_0x64.html  globals_0x65.html  globals_0x6d.html  globals_0x6e.html  globals_0x72.html  globals_func_0x65.html  globals_func_0x69.html  globals_func_0x6b.html  globals_func_0x6d.html  globals_func_0x70.html  globals_func_0x72.html  globals_func_0x73.html  group__Evas__Canvas.html  group__Evas__Canvas__Events.html  group__Evas__Cserve.html  group__Evas__Event__Freezing__Group.html  group__Evas__Line__Group.html  group__Evas__Object__Box.html  group__Evas__Object__Group.html  group__Evas__Object__Group__Basic.html  group__Evas__Object__Group__Extras.html  group__Evas__Object__Group__Interceptors.html  group__Evas__Object__Group__Size__Hints.html  group__Evas__Object__Text.html  group__Evas__Object__Textblock.html  group__Evas__Pointer__Group.html  group__Evas__Smart__Group.html  group__Evas__Utils.html  index.html  struct__Evas__Coord__Rectangle.html  struct__Evas__Cserve__Stats.html  struct__Evas__Event__Key__Down.html  struct__Evas__Event__Key__Up.html  struct__Evas__Event__Mouse__Down.html  struct__Evas__Event__Mouse__Out.html  struct__Evas__Event__Mouse__Wheel.html  struct__Evas__Event__Multi__Down.html  (+4 more)
doc/latex/: Evas_8h.tex  annotated.tex  doxygen.sty  files.tex  group__Evas__Canvas.tex  group__Evas__Canvas__Events.tex  group__Evas__Coord__Mapping__Group.tex  group__Evas__Cserve.tex  group__Evas__Event__Feeding__Group.tex  group__Evas__Event__Freezing__Group.tex  group__Evas__Font__Group.tex  group__Evas__Font__Path__Group.tex  group__Evas__Group.tex  group__Evas__Image__Group.tex  group__Evas__Line__Group.tex  group__Evas__Object__Box.tex  group__Evas__Object__Group.tex  group__Evas__Object__Group__Basic.tex  group__Evas__Object__Group__Events.tex  group__Evas__Object__Group__Extras.tex  group__Evas__Object__Group__Find.tex  group__Evas__Object__Group__Interceptors.tex  group__Evas__Object__Group__Map.tex  group__Evas__Object__Group__Size__Hints.tex  group__Evas__Object__Image.tex  group__Evas__Object__Polygon.tex  group__Evas__Object__Rectangle.tex  group__Evas__Object__Specific.tex  group__Evas__Object__Table.tex  group__Evas__Object__Text.tex  group__Evas__Object__Textblock.tex  group__Evas__Output__Method.tex  group__Evas__Output__Size.tex  group__Evas__Pointer__Group.tex  group__Evas__Smart__Group.tex  group__Evas__Smart__Object__Clipped.tex  group__Evas__Smart__Object__Group.tex  group__Evas__Utils.tex  hierarchy.tex  index.tex  (+25 more)
doc/man/man3/: Evas.h.3  Evas_Canvas.3  Evas_Canvas_Events.3  Evas_Coord_Mapping_Group.3  Evas_Cserve.3  Evas_Event_Feeding_Group.3  Evas_Event_Freezing_Group.3  Evas_Font_Group.3  Evas_Font_Path_Group.3  Evas_Group.3  Evas_Image_Group.3  Evas_Line_Group.3  Evas_Map.3  Evas_Object_Box.3  Evas_Object_Group.3  Evas_Object_Group_Basic.3  Evas_Object_Group_Events.3  Evas_Object_Group_Extras.3  Evas_Object_Group_Find.3  Evas_Object_Group_Interceptors.3  Evas_Object_Group_Map.3  Evas_Object_Group_Size_Hints.3  Evas_Object_Image.3  Evas_Object_Polygon.3  Evas_Object_Rectangle.3  Evas_Object_Specific.3  (+75 more)
m4/: evas_check_engine.m4  evas_check_loader.m4
mobile/: NEWS
packaging/: evas.spec
src/: Makefile.am
src/benchmarks/evas/: Makefile.am  evas_bench_saver.c
src/examples/: evas-aspect-hints.c
src/lib/: Evas.h  Evas_GL.h  Evas_GL_GLES1_Helpers.h  Evas_GL_GLES2_Helpers.h  Makefile.am  main.c
src/lib/filters/: Makefile.am  evas_filter.c  evas_filter_blend.c  evas_filter_parser.c  evas_filter_private.h  evas_filter_tizen_compat.h  evas_filter_utils.c
src/modules/loaders/tgv/: Makefile.am  evas_image_load_tgv.c
src/modules/savers/tgv/: Makefile.am  evas_image_save_tgv.c
src/static_deps/: Makefile.am
src/tests/: evas_test_textblock.c
wearable/: configure.ac
(+387 files in other folders)
